dark mode fix #564

--- a/css/wizard.css
+++ b/css/wizard.css
@@ -88,7 +88,7 @@
     width: 8%;
     min-width: 60px;
     height: 100%;
-    color: var(--color-primary-text);
+    color: white;
 }
 
 #analyticsWizard .modal-wrapper .modal-container .wizardClose {
